# vzome

./: AGENTS.md  CLAUDE.md  README.md
materials-discovery/: .gitignore  Progress.md  README.md  REAL_MODE_EXECUTION_PLAN.md  RUNBOOK.md  pyproject.toml  requirements.txt
materials-discovery/developers-docs/: backend-system.md  configuration-reference.md  contributing.md  guided-design-tutorial.md  index.md  llm-external-benchmark-runbook.md  llm-external-target-runbook.md  llm-integration.md  llm-quasicrystal-landscape.md  llm-translated-benchmark-runbook.md  llm-translation-contract.md  llm-translation-runbook.md  pipeline-stages.md  podcast-deep-dive-source.md  programmatic-zomic-visualization.md  reference-aware-benchmarks.md  zomic-design-workflow.md  zomic-llm-data-plan.md  zphi-geometry.md
materials-discovery/notebooks/: cross_run_drift_detection.ipynb  guided_design_tutorial.ipynb  metric_distribution_deep_dive.ipynb  source_contribution_analysis.ipynb
materials-discovery/scripts/: export_sc_zn_prototype.py  run_exec_pipeline.sh  run_llm_acceptance_benchmarks.sh  run_llm_generate_benchmarks.sh  run_llm_pipeline_benchmarks.sh  run_native_pipeline.sh  run_real_pipeline.sh  run_reference_aware_benchmarks.sh
materials-discovery/tests/: test_active_learn.py  test_benchmarking.py  test_chemistry.py  test_cli.py  test_data_source_api_adapters.py  test_data_source_cod.py  test_data_source_hypodx.py  test_data_source_materials_project.py  test_data_source_optimade.py  test_data_source_projection.py  test_data_source_qa.py  test_data_source_registry.py  test_ingest.py  (+89 more)
(+750 files in other folders)
